[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
lru_time_cache = "0.11.11"
reqwest = "0.12.2"
rocket = "0.5.0"
rocket_contrib = "0.4"
serde = "1.0.197"
serde_json = "1.0.11"

